--- a/css/email2.css
+++ b/css/email2.css
@@ -1,65 +1,68 @@
 .em-template {
-    background: white;
-    border: 5px solid rgb(61, 112, 232);
-    font-family: arial,sans-ser;
-    font-size: .7em;
-    margin-top: 3em;
-
+  background: white;
+  /* border: 5px solid rgb(61, 112, 232); */
+  font-family: arial,sans-ser;
+  font-size: .7em;
+  /* specific to email2 */
+  max-width: 700px;
+  margin: 0 100px;
 }
-
 .em-template p,
 .em-template h1,
-  .em-template h2,
-  .em-template h4,
-  .em-template h5 {
-      color: #000000;
-      text-shadow: none;
-      margin: 0 20px;
-  }
-.paypal img{
-    width: 25%;
-    float: none;
-    margin: 0 auto;
+.em-template h2,
+.em-template h4,
+.em-template h5 {
+    color: #000000;
+    text-shadow: none;
+    margin: 0 20px;
 }
-.body {
-      text-align: center;
-  }
-  /* Tooltip container */
-  .tooltip {
-    position: relative;
-    /* border-bottom: 1px dotted black; If you want dots under the hoverable text */
-  }
-  
-.tooltip-button {
+/* Tooltip container */
+.tooltip {
   position: relative;
   /* border-bottom: 1px dotted black; If you want dots under the hoverable text */
-  background-color: rgb(61, 112, 232);
-  border: 4px solid white;
-  height: 20px;
-  width: 200px;
-  text-align: center;
-  color: white;
-  padding: 10px 0 0px;
-  margin: 0 auto;
+}
+
+.tooltip-button {
+position: relative;
+/* border-bottom: 1px dotted black; If you want dots under the hoverable text */
+background-color: rgb(61, 112, 232);
+border: 4px solid white;
+height: 20px;
+width: 200px;
+text-align: center;
+color: white;
+padding: 10px 0 0px;
+margin: 0 auto;
 }
 
 /* Tooltip text */
 .tooltip .tooltiptext,
 .tooltip-button .tooltiptext {
-  visibility: hidden;
-  width: 250px;
-  background-color: white;
-  color: black;
-  text-align: center;
-  padding: 5px 0;
-  border-radius: 6px;
- 
-  /* Position the tooltip text - see examples below! */
-  position: absolute;
-  z-index: 1;
+visibility: hidden;
+width: 250px;
+background-color: white;
+color: black;
+text-align: center;
+padding: 5px 0;
+border-radius: 6px;
+
+/* Position the tooltip text - see examples below! */
+position: absolute;
+z-index: 1;
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
-  visibility: visible;
+visibility: visible;
+}
+
+/* specific to email2 */
+.paypal img{
+  width: 25%;
+  float: none;
+  margin: 0 auto;
+}
+.body {
+  border: 5px solid rgb(61, 112, 232);
+  text-align: center;
 }
