--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@ html {
 }
 
 body {
-    background: #001C34;
+    /* background: #001C34; */
+    background-color: grey;
     /* max-height: 100vh; */
     max-width: 1100px;
     /* max-height: 100vh;
