tweaks - color/form/input/q8-9-10

--- a/css/email6.css
+++ b/css/email6.css
@@ -1,7 +1,7 @@
 .em-template {
   /* specific to email2 and 6*/
   max-width: 700px;
-  margin: 0 100px;
+  margin: 0 auto;
 }
 
   /* Tooltip button*/
