--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html {
 
 body {
     /* background: #001C34; */
-    background-color: grey;
+    background-color: #4e606c;
     /* max-height: 100vh; */
     max-width: 1100px;
     /* max-height: 100vh;
