--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html {
 
 body {
     /* background: #001C34; */
-    background-color: #4e606c;
+    background-color: #cfd3d7;
     /* max-height: 100vh; */
     max-width: 1100px;
     /* max-height: 100vh;
@@ -30,7 +30,7 @@ h1 {
 
 .content {
     background: #243e50;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0 auto;
 }
 
@@ -84,9 +84,9 @@ h1 {
     font-size: 1.25em;
     border-radius: 10px;
 }
-.content-register {
+/* .content-register {
     height: 115vh;
-}
+} */
 .content__section--register {
     max-width: 600px;
     margin: 0 auto;
@@ -174,11 +174,15 @@ input[type='radio'] {
 }
 
 footer {
-    margin-top: 140px;
+    /* margin-top: 140px; */
+    /* padding-bottom: 50px; */
+    position: relative;
+bottom: -80px;
 }
 
 .footer-register {
-    margin-top: 30px;
+    /* margin-top: 30px; */
     margin-left: 100px;
+
 }
 
