--- a/css/email-base.css
+++ b/css/email-base.css
@@ -3,6 +3,9 @@
     font-family: arial,sans-ser;
     margin: 3em auto 0;
     width: 80%;
+    height: 400px; 
+    overflow-y: auto; 
+    overflow-x: hidden;
 }  
 .em-template p,
 .em-template h1,
