--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html {
 
 body {
     /* background: #001C34; */
-    background-color: #4e606c;
+    background-color: #cfd3d7;
     /* max-height: 100vh; */
     max-width: 1100px;
     /* max-height: 100vh;
@@ -30,7 +30,7 @@ h1 {
 
 .content {
     background: #243e50;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0 auto;
 }
 
@@ -49,6 +49,9 @@ h1 {
 }
 .content__section#pgSignUp {
     padding-top: 50px;
+    grid-template-columns: 1fr;
+    grid-template-areas: "title" "text";
+    justify-items: center;
 }
 .content__section--title,
 .content__section--text,
@@ -84,9 +87,9 @@ h1 {
     font-size: 1.25em;
     border-radius: 10px;
 }
-.content-register {
+/* .content-register {
     height: 115vh;
-}
+} */
 .content__section--register {
     max-width: 600px;
     margin: 0 auto;
@@ -154,6 +157,9 @@ h1 {
 .form-questions {
     margin: 30px 0;
 }
+.form-questions label {
+    margin-right: 2em;
+}
 
 /* .content__section--pages{
     text-align: center;
@@ -166,7 +172,7 @@ label,
 input {
     margin-top: 1em;
     font-size: 1.5em;
-    margin-right: 2em;
+    /* margin-right: 2em; */
 }
 input[type='radio'] {
     transform: scale(2);
@@ -174,11 +180,15 @@ input[type='radio'] {
 }
 
 footer {
-    margin-top: 140px;
+    /* margin-top: 140px; */
+    /* padding-bottom: 50px; */
+    position: relative;
+bottom: -80px;
 }
 
 .footer-register {
-    margin-top: 30px;
+    /* margin-top: 30px; */
     margin-left: 100px;
+
 }
 
