--- a/css/email1.css
+++ b/css/email1.css
@@ -31,4 +31,8 @@
     margin: 0 auto;
     padding: 2em 0;
   }  
-  
+  h4.em-dot-date {
+    display: block;
+    margin: -15px 80px 0px;
+   }
+   
