--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ input[type='radio'] {
 footer { 
     /* margin-top: 140px; */
     /* padding-bottom: 50px; */
-    position: absolute;
+    /* position: absolute; This was overlaying on the buttons when in debug--could not select button. */
 bottom: 0;
 height: 30px;
 padding: 20px 100px;
