--- a/css/style.css
+++ b/css/style.css
@@ -36,49 +36,50 @@ body {
     width: 75px;
     border: 3px solid black;
 }
+
+
+#sp00 {
+    float: left;
+    background-color: grey;
+}
 #sp01 {
     
     float: left;
-    background-color: green;
+    background-color: grey;
 }
 #sp02 {
     float: left;
-    background-color: green;
+    background-color: grey;
 }
 #sp03 {
     float: left;
-    background-color: red;
+    background-color: grey;
 }
 
 #sp04 {
     float: left;
-    background-color: green;
+    background-color: grey;
 }
 #sp05 {
     float: left;
-    background-color: green;
+    background-color: grey;
 }
 #sp06 {
     float: left;
-    background-color: red;
+    background-color: grey;
 }
 
 #sp07 {
     float: left;
-    background-color: green;
+    background-color: grey;
 }
 #sp08 {
     float: left;
-    background-color: green;
+    background-color: grey;
 }
 #sp09 {
     float: left;
-    background-color: red;
-}
-
-#sp10 {
-    float: left;
-    background-color: green;
+    background-color: grey;
 }
 
 h1 {
