add .em-template h3 for color/shadow/margin

--- a/css/email-base.css
+++ b/css/email-base.css
@@ -10,6 +10,7 @@
 .em-template p,
 .em-template h1,
   .em-template h2,
+  .em-template h3,
   .em-template h4,
   .em-template h5 {
       color: #000000;
