--- a/css/email11.css
+++ b/css/email11.css
@@ -1,15 +1,14 @@
 .em-template {
-    font-size: inherit;
-    background: none;
+    margin: 30px auto;
     width: 78%;
-  }
+    background: none;  }
   
     /* Tooltip button*/
 .section__answer h1 {
     display: grid;
     justify-content: center;
     font-size: 2em;
-    margin-top: 50px;
+    margin-top: 53px;
 }  
     .webpage {
         display: grid;
@@ -17,7 +16,8 @@
         grid-template-areas: 
         "img img2";
         grid-column-gap: 20px;
-        margin-top: 100px;
+        margin-top: 75px;
+        margin-bottom: 78px;
     }
     .web1 {
         grid-area: img;
