adj em widths to be consistent with others

--- a/css/email2.css
+++ b/css/email2.css
@@ -1,6 +1,6 @@
 .em-template {
   /* specific to email2 */
-  max-width: 700px;
+  /* max-width: 700px; */
   margin: 0 auto;
   font-size: .7em;
 }
