--- a/css/email4.css
+++ b/css/email4.css
@@ -1,6 +1,6 @@
 .em-template {
   /* email4 specific */
-  max-width: 700px;
+  /* max-width: 700px; */
     margin: 0 auto;
     font-size: .7em;
 }
@@ -20,6 +20,7 @@
           position: relative;
           top: 11px;
           left: 9px;/*to center initials in dot*/
+          color: white;
         }
           .em-from-div h4 {
       /* email4 specific */
@@ -29,7 +30,7 @@
        .body {
       /* email4 specific */
           border: 2px solid rgb(61, 112, 232);
-          max-width: 500px;
+          max-width: 700px;
           margin: 0 100px;
       }
         /* specific to email4 */
@@ -54,7 +55,7 @@
       }
       .googlemap {
           margin: 0 20px;
-          height: 300px;
+          height: 400px;
    }
       .googlemap img {
           width: 100%;
