--- a/css/email-base.css
+++ b/css/email-base.css
@@ -23,7 +23,7 @@
 
 
     /* Tooltip container */
-    .tooltip {
+    /* .tooltip {
         position: relative;
       }
       
@@ -35,9 +35,9 @@
     color: white;
     margin: 0 auto;
     border: 4px solid white;
-}
+} */
 /* Tooltip text */
-.tooltip .tooltiptext,
+/* .tooltip .tooltiptext,
 .tooltip-button .tooltiptext {
   visibility: hidden;
   width: 250px;
@@ -45,11 +45,11 @@
   color: black;
   text-align: center;
   padding: 5px 0;
-  border-radius: 6px;
+  border-radius: 6px; */
   /* Position the tooltip text - see examples below! */
-  position: absolute;
+  /* position: absolute;
   z-index: 1;
-}
+} */
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
     visibility: visible;
@@ -81,3 +81,92 @@
     margin: 30px auto;
     height: 365px;
   }
+  /* Tooltip container */
+  .tooltip {
+    display: inline;
+    position: relative;
+    z-index: 999;
+      }
+    
+.tooltip-button {
+  position: relative;
+  width: 200px;
+  height: 20px;
+  text-align: center;
+  color: white;
+  margin: 0 auto;
+  border: 4px solid white;
+}
+/* Tooltip text */
+/* .tooltip .tooltiptext,
+.tooltip-button .tooltiptext {
+visibility: hidden;
+width: 250px;
+background-color: white;
+color: black;
+text-align: center;
+padding: 5px 0;
+border-radius: 6px; */
+/* Position the tooltip text - see examples below! */
+/* position: absolute;
+z-index: 1;
+} */
+/* Show the tooltip text when you mouse over the tooltip container */
+/* .tooltip:hover .tooltiptext {
+  visibility: visible;
+} */
+.tooltip-content {
+	position: absolute;
+	background: url(../images/shape1.svg) no-repeat center bottom;
+	background-size: 100% 100%;
+	z-index: 9999;
+	width: 200px;
+	bottom: 100%;
+	left: 50%;
+	margin-left: -100px;
+	padding: 50px 30px;
+	text-align: center;
+	color: #243e50;
+	opacity: 0;
+	cursor: default;
+	font-size: .8em;
+	line-height: 1.4;
+	pointer-events: none;
+  font-family: "Glegoo", "Courier New", Courier, monospace;
+	-webkit-transform: scale3d(0.1,0.2,1);
+	transform: scale3d(0.1,0.2,1);
+	-webkit-transform-origin: 50% 120%;
+	transform-origin: 50% 120%;
+	-webkit-transition: opacity 0.4s, -webkit-transform 0.4s;
+	transition: opacity 0.4s, transform 0.4s;
+	-webkit-transition-timing-function: ease, cubic-bezier(0.6,0,0.4,1);
+	transition-timing-function: ease, cubic-bezier(0.6,0,0.4,1);
+  /* border-radius: 150px;
+background: rgb(175, 212, 222);
+box-shadow:  5px 5px 10px #d9d9d9,
+-5px -5px 10px #e7e7e7; */
+}
+
+.tooltip:hover .tooltip-content {
+	opacity: 1;
+	pointer-events: auto;
+	-webkit-transform: scale3d(1,1,1);
+	transform: scale3d(1,1,1);
+}
+
+/* Arrow */
+
+.tooltip-content::after {
+	content: '';
+	position: absolute;
+	width: 16px;
+	height: 16px;
+  border-radius: 50%;
+  border: 1px solid #4f606c;
+	left: 50%;
+	margin-left: -8px;
+	top: 100%;
+	background: rgb(175, 212, 222);
+	-webkit-transform: translate3d(0,-60%,0) rotate3d(0,0,1,45deg);
+	transform: translate3d(0,-60%,0) rotate3d(0,0,1,45deg);
+}
